--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Cabin|Quicksand|Rubik" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
-  <headder>
-    <h1>My Developer Page</h1>
-  </headder>
+  <header>
+    <h1>My Dev Page</h1>
+  </header>
   <sum>
     This is the page where I will store all of my projects for my web development tools project.
   </sum>
 
   <div class = 'projects'>
-    <a href="SOPLoveletter/sop.html"></a>
+    <a href="SOPLoveletter/sop.html">S.O.P - Love Letter - S.O.P</a>
   </div>
 
 </body>
