css color selected

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
   <header>
     <h1>My Dev Page</h1>
   </header>
-  <sum>
+  <article>
     This is the page where I will store all of my projects for my web development tools project.
-  </sum>
+  </article>
 
-  <div class = 'projects'>
-    <a href="SOPLoveletter/sop.html">S.O.P - Love Letter - S.O.P</a>
+  <div class = 'projectbox'>
+    <!-- <a href="SOPLoveletter/sop.html">S.O.P - Love Letter - S.O.P</a> -->
+    ul<li.project$*2
   </div>
 
 </body>
