--- a/index.html
+++ b/index.html
@@ -18,7 +18,28 @@
 
   <div class = 'projectbox'>
     <!-- <a href="SOPLoveletter/sop.html">S.O.P - Love Letter - S.O.P</a> -->
-    ul<li.project$*2
+    <!-- ul<li.project$*2 -->
+    <div class="project">
+      <h4><a href="SOPLoveletter/sop.html">S.O.P - Love Letter - S.O.P</a></h4>
+      <p></p>
+    </div>
+    <div class="project">
+      <h4><a href="">Project 2</a></h4>
+      <p></p>
+    </div>
+    <div class="project">
+      <h4><a href="">Project 3</a></h4>
+      <p></p>
+    </div>
+    <div class="project">
+      <h4><a href="">Project 4</a></h4>
+      <p></p>
+    </div>
+    <div class="project">
+      <h4><a href="">Project 5</a></h4>
+      <p></p>
+    </div>
+
   </div>
 
 </body>
