--- a/index.html
+++ b/index.html
@@ -6,41 +6,45 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Cabin|Quicksand|Rubik" rel="stylesheet">
-  <title>Document</title>
+  <title>Web Dev Page</title>
 </head>
 <body>
-  <header>
-    <h1>My Dev Page</h1>
-  </header>
-  <article>
-    This is the page where I will store all of my projects for my web development tools project.
-  </article>
+  <main>
+    <header>
+      <h1>My Dev Page</h1>
+    </header>
+    <article>
+      This is the page where I will store all of my projects for my web development tools project.
+    </article>
 
-  <div class = 'projectbox'>
-    <!-- <a href="SOPLoveletter/sop.html">S.O.P - Love Letter - S.O.P</a> -->
-    <!-- ul<li.project$*2 -->
-    <div class="project">
-      <h4><a href="SOPLoveletter/sop.html">S.O.P - Love Letter - S.O.P</a></h4>
-      <p></p>
-    </div>
-    <div class="project">
-      <h4><a href="">Project 2</a></h4>
-      <p></p>
-    </div>
-    <div class="project">
-      <h4><a href="">Project 3</a></h4>
-      <p></p>
-    </div>
-    <div class="project">
-      <h4><a href="">Project 4</a></h4>
-      <p></p>
-    </div>
-    <div class="project">
-      <h4><a href="">Project 5</a></h4>
-      <p></p>
-    </div>
+    <div class = 'projectbox'>
+      <!-- <a href="SOPLoveletter/sop.html">S.O.P - Love Letter - S.O.P</a> -->
+      <!-- ul<li.project$*2 -->
+      <div class="project">
+        <h4><a href="SOPLoveletter/sop.html">S.O.P - Love Letter - S.O.P</a></h4>
+        <p></p>
+      </div>
+      <div class="project">
+        <h4><a href="">Project 2</a></h4>
+        <p></p>
+      </div>
+      <div class="project">
+        <h4><a href="">Project 3</a></h4>
+        <p></p>
+      </div>
+      <div class="project">
+        <h4><a href="">Project 4</a></h4>
+        <p></p>
+      </div>
+      <div class="project">
+        <h4><a href="">Project 5</a></h4>
+        <p></p>
+      </div>
 
-  </div>
+    </div>
+  </main>
+  <div class="deco1"></div>
+
 
 </body>
 </html>
