--- a/SOPLoveletter/sop.html
+++ b/SOPLoveletter/sop.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Pacifico|Quicksand|Roboto|VT323" rel="stylesheet">
   <title>Standard Operating Poem</title>
 </head>
 <body>
@@ -12,41 +13,45 @@
     <h1>A Collection of Love Letters</h1>
   </header>
   <main>
-    <article class="Git">
-      <a href="git.html">
-      <div class="head">
-        Git
+    <article class="Github">
+      <a href="Github.html">
+      <div class="headgithub">
+        <h2>Github</h2>
       </div>
 
-        <img src="img/giticon.png" alt="">
+        <img src="img/githubicon1.png" alt="The Github Icon" class="imggh">
 
       <p>
-        Oh Git I love the so...
+        Oh fair and wondrous Github...
       </p>
       </a>
     </article>
 
-    <article class="Github">
-      <a href="Github.html">
-      <div class="head">
-        Github
+    <article class="Git">
+      <a href="git.html">
+      <div class="headgit">
+        <h2>Git</h2>
       </div>
 
-        <img src="" alt="">
+        <img src="img/giticon.png" alt="The Git icon" class="imgg">
 
-      <p></p>
+      <p>
+        Oh Git I love thee so...
+      </p>
       </a>
     </article>
 
     <article class="Bash">
       <a href="Bash.html">
-      <div class="head">
-        Bash
+      <div class="headbash">
+        <h2>Bash</h2>
       </div>
 
-        <img src="" alt="">
+        <img src="img/bashicon.png" alt="The Bash icon" class="imgb">
 
-      <p></p>
+      <p>
+        Bash, oh magnificient Bash...
+      </p>
       </a>
     </article>
   </main>
