just finished exquisite corpse project

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <p></p>
       </div>
       <div class="project">
-        <h4><a href="">Project 2</a></h4>
+        <h4><a href="boilerplate/index.html">HTML Boilerplate Practice</a></h4>
         <p></p>
       </div>
       <div class="project">
-        <h4><a href="">Project 3</a></h4>
+        <h4><a href="exquisite-corpse/index.html">The Life, Love, and Journey of Ortega</a></h4>
         <p></p>
       </div>
       <div class="project">
