--- a/SOPLoveletter/sop.html
+++ b/SOPLoveletter/sop.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Pacifico|Quicksand|Roboto|VT323" rel="stylesheet">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <title>Standard Operating Poem</title>
 </head>
 <body>
