--- a/spritepage/index.html
+++ b/spritepage/index.html
@@ -21,12 +21,27 @@
 
         <!-- Add your site or application content here -->
         <header>
-          <h1></h1>
+          <h1>Sprite Sheet of Eternity</h1>
         </header>
-        <section>
-          <h2></h2>
-          <p></p>
-        </section>
+        <nav>
+        <ul>
+          <li><a href="#" class="icon-check"><span></span></a></li>
+          <li><a href="#" class="icon-envlp"><span></span></a></li>
+          <li><a href="#" class="icon-bank"><span></span></a></li>
+          <li><a href="#" class="icon-globe"><span></span></a></li>
+          <li><a href="#" class="icon-spotify"><span></span></a></li>
+        </ul>
+      </nav>
+
+      <footer>
+        <ul>
+          <li><a href="https://www.facebook.com" class="icon-facebook"><span>Facebook</span></a></li>
+          <li><a href="https://www.twitter.com" class="icon-twitter"><span>Twitter</span></a></li>
+          <li><a href="https://www.instagram.com" class="icon-insta"><span>Instagram</span></a></li>
+          <li><a href="https://www.snaochat.com" class="icon-snapchat"><span>Snapchat</span></a></li>
+          <li><a href="https://www.tumblr.com" class="icon-tumblr"><span>Tumblr</span></a></li>
+        </ul>
+      </footer>
 
 
 
