--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       </div>
       <div class="project">
         <h4><a href="exquisite-corpse/index.html">The Life, Love, and Journey of Ortega</a></h4>
-        <p><img src="tacoparty.png" alt=""> <br> This is a wonderful story about a hopeful taco named ortega, It was made as a colaberative github project.</p>
+        <p><img src="img/tacoparty.png" alt=""> <br> This is a wonderful story about a hopeful taco named ortega, It was made as a colaberative github project.</p>
       </div>
       <div class="project">
         <h4><a href="spritepage/index.html">Sprite Page</a></h4>
-        <p><img src="spritesheet.png" alt=""> <br> This is a simple page showing the usability and value of sprites.</p>
+        <p><img src="img/spritesheet.png" alt=""> <br> This is a simple page showing the usability and value of sprites.</p>
       </div>
       <div class="project">
         <h4><a href="">Coming Soon!</a></h4>
