finished corprate site page

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <p><img src="img/spritesheet.png" alt=""> <br> This is a simple page showing the usability and value of sprites.</p>
       </div>
       <div class="project">
-        <h4><a href="">Coming Soon!</a></h4>
-        <p></p>
+        <h4><a href="corpratesite/index.html">Buy My Stuff</a></h4>
+        <p><img src="img/buymystuff.png" alt=""> <br> My Midterm Project, a mock up of a professional comercial web page.</p>
       </div>
 
     </div>
