added new projects, set up the index to display wordpress and parallax project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Cabin|Quicksand|Rubik" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <title>Web Dev Page</title>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-96105269-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </head>
 <body>
   <main>
@@ -20,6 +31,10 @@
     <div class = 'projectbox'>
       <!-- <a href="SOPLoveletter/sop.html">S.O.P - Love Letter - S.O.P</a> -->
       <!-- ul<li.project$*2 -->
+      <div class="project">
+        <h4><a href="https://github.com/hchohimer?tab=repositories">My Github Repos</a></h4>
+        <p> This link will take you to my Git Hub Repositories</p>
+      </div>
       <div class="project">
         <h4><a href="SOPLoveletter/sop.html">S.O.P - Love Letter - S.O.P</a></h4>
         <p><img src="img/SOPloveletter.png" alt=""> <br> This project is a love letter to Git, Github and Bash which both shows the appreaciation I have for these programs and the standard operating Procedure of using them.</p>
@@ -39,6 +54,18 @@
       <div class="project">
         <h4><a href="corpratesite/index.html">Buy My Stuff</a></h4>
         <p><img src="img/buymystuff.png" alt=""> <br> My Midterm Project, a mock up of a professional comercial web page.</p>
+      </div>
+      <div class="project">
+        <h4><a href="message/index.html">Analytics and My Message</a></h4>
+        <p><img src="img/seattle.png" alt=""> <br> A page for analytics and a space for my message.</p>
+      </div>
+      <div class="project">
+        <h4><a href="parallax-project/index.html">Parallax in Space</a></h4>
+        <p><img src="img/parallax.png" alt=""> <br> A story detailing the daily life of a star ship captian using parallax images.</p>
+      </div>
+      <div class="project">
+        <h4><a href="wordpress/index.html">My Wordpress Site</a></h4>
+        <p><img src="img/wordpress.png" alt=""> <br> My wordpress development blog where I will begin to record my projects as a work on them. The site features an original theme.</p>
       </div>
 
     </div>
